--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -25,18 +25,18 @@
 
 
 <div class="login-container">
-    <h1><b>CODERStore</b></h1>
+    <h1><b>TodoMoto</b></h1>
     <h2><b>Login de usuario</b></h2>
 
     <form action="/api/sessions/login" method="post" style="margin-top: 32px;">
         <div class="input-group" style="width: 300px; margin-bottom: 32px;">
             <span class="input-group-text" id="group1"><i class="fa-solid fa-user"></i></span>
-            <input type="email" name="email" class="form-control" placeholder="Nombre" required="required" autofocus="autofocus">
+            <input type="email" name="email" class="form-control" placeholder="Email" required="required" autofocus="autofocus">
         </div>
 
         <div class="input-group" style="width: 300px; margin-bottom: 32px;">
             <span class="input-group-text" id="group2"><i class="fa-solid fa-lock"></i></span>
-            <input type="password" name="password" class="form-control" required="required">
+            <input type="password" name="password" placeholder="Password" class="form-control" required="required">
         </div>
 
         <button type="submit" class="btn btn-success">Ingresar</button>
