--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,21 +1,33 @@
 <div style="margin: 20px;">
-    <h5>Bienvenido: {{user.firstName}}, {{user.lastName}}</h5>
-    <p>Se ha logueado correctamente con el rol: {{user.role}}</p>
+    <div class="d-flex space-evenly" style="height: 150px;">
+        <div style="width: 50%">
+        <h5>Bienvenido: {{user.firstName}}, {{user.lastName}}</h5>
+        <p>Se ha logueado correctamente con el rol: {{user.role}}</p>
+        </div>
 
-    <h1>Listado de Productos RealTime</h1>
-    
-    <ul id="productsList" class="list-group" method="delete" enctype="multipart/form-data">
-        {{#each productsData.docs}}
-        <li style="margin-bottom: 40px;">
-            <img src="{{thumbnail}}" style="width: 10rem; height:100px;" alt="">
-            <h4>{{title}}</h4>
-            <p>{{description}}</p>
-            <p>$ {{price}}</p>
-            <button id="addProductCart" type="button" class="btn btn-success" style="width: 10rem; height: 2rem;" onclick="addToCart('{{_id}}','6656ba460c12bcb315c5ea5d')">Agregar al carrito</button>            
-            <button type="button" class="btn btn-danger" style="width: 10rem; height: 2rem;" onclick="handleDeleteButtonClick('{{_id}}')">Eliminar</button>
-        </li>
-        {{/each}}
-    </ul>
+        <div style="width: 50%" class="d-flex justify-content-end">
+            <form action="/api/sessions/logout" method="get">
+                <button type="submit" class="btn btn-primary">Cerrar sesion</button>
+            </form>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <h1>Listado de Productos RealTime</h1>
+    </div>
+    <div class="d-flex justify-content-center">
+        <ul id="productsList" class="list-group" method="delete" enctype="multipart/form-data">
+            {{#each productsData.docs}}
+            <li style="margin-bottom: 40px;">
+                <img src="{{thumbnail}}" style="width: 10rem; height:100px;" alt="">
+                <h4>{{title}}</h4>
+                <p>{{description}}</p>
+                <p>$ {{price}}</p>
+                <button id="addProductCart" type="button" class="btn btn-success" style="width: 10rem; height: 2rem;" onclick="addToCart('{{_id}}','6656ba460c12bcb315c5ea5d')">Agregar al carrito</button>            
+                <button type="button" class="btn btn-danger" style="width: 10rem; height: 2rem;" onclick="handleDeleteButtonClick('{{_id}}')">Eliminar de la base</button>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
 
     <div class="pagination" >
         {{#if productsData.hasPrevPage}}
@@ -51,11 +63,7 @@
         <button type="submit" class="btn btn-success" style="margin: 10px;">Cargar</button>
     </form>
 </div>
-<div>
-    <form action="/api/sessions/logout" method="get">
-        <button type="submit" class="btn btn-success">Salir</button>
-    </form>
-</div>
+
 
 
 
