--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -49,19 +49,19 @@
             <input type="email" name="email" class="form-control" placeholder="Email" required="required" autocomplete="email">
         </div>
 
-        <div class="input-group" style="width: 100%; margin-bottom: 8px;">
-            <span class="input-group-text" id="group4"><i class="fa-solid fa-venus-mars"></i></span>
+        {{!-- <div class="input-group" style="width: 100%; margin-bottom: 8px;"> --}}
+            {{!-- <span class="input-group-text" id="group4"><i class="fa-solid fa-venus-mars"></i></span> --}}
             {{!-- <input type="text" name="gender" class="form-control" placeholder="Gender" required="required" autocomplete="gender"> --}}
-            <select name="role" class="form-control">
+            {{!-- <select name="role" class="form-control">
                 <option value="usuario" selected>Usuario</option>
-                <option value="premium">Premium</option>
-                <option value="admin">Admin</option>
-            </select>
-        </div>
+                <option value="premie">Premium</option>
+                <option value="Admin">Admin</option>
+            </select> --}}
+        {{!-- </div> --}}
 
         <div class="input-group" style="width: 100%; margin-bottom: 32px;">
             <span class="input-group-text" id="group5"><i class="fa-solid fa-lock"></i></span>
-            <input type="password" name="password" class="form-control" required="required" autocomplete="password">
+            <input type="password" name="password" placeholder="Password" class="form-control" required="required" autocomplete="password">
         </div>
 
         <button type="submit" class="btn btn-success btn-100">Registrarse</button>
